--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,17 +2,18 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-}
+    scroll-behavior: smooth;
+}  
 
 body {
-    background-color: #d9dcd6;
+    background-color: #ffffff;
 }
 
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: black;
-    color: #ffffff;
+    background-color: white;
+    color: black;
 }
 
 /* Footer */
@@ -23,26 +24,87 @@ footer {
     text-align: center;
 }
 
+h2{
+    color: white;
+    text-align: center;
+    font-size: 250%;
+}
+
+p{
+    font-size: 20px;
+    
+}
+
 /* Horizontal Navigation Bar */
 .horizontal-nav-bar {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
     font-size: 20px;
     list-style-type: none;
+    text-transform: uppercase;
+    position: relative;
 }
 
 .horizontal-nav-bar a{
     display: inline-block;
     margin-left: 25px;
-    color: #ffffff;
+    color: black;
     text-decoration: none;
 }
+
+/* Links on Navigation Bar change color on hover */
+
+
+  /* .horizontal-nav-bar:after {
+    
+    transition: transform 0.25s ease-out;
+  }
+  
+  .horizontal-nav-bar:hover:after {
+    
+  } */
+
+/* Navigation Scroll */
+.scroll-container {
+    overflow-y: scroll;
+    scroll-behavior: smooth;
+  }
+  .scroll-page {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    font-size: 5em;
+  }
+
+  /* About Me Avatar */
+
+  .about-me-avatar{
+    display: block;
+    margin-left: auto;
+    margin-right: auto; 
+ 
+  }
 
 /* Website Title  */
 #portfolio-name {
     display: inline-block;
     font-size: 48px;
     font-family: 'Ms Madi', cursive;
+}
+/* Section Headers */
+#about-me, 
+#portfolio,
+#contact
+{
+  height: 100px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: black;
+  font-family: 'Source Sans Pro', sans-serif;
+  text-transform: uppercase;
+  font-size: 56px;
+
 }
